@@ -15,23 +15,16 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import uk.gov.justice.laa.portal.landingpage.dto.AdminAppDto;
 import uk.gov.justice.laa.portal.landingpage.dto.AppAdminDto;
-import uk.gov.justice.laa.portal.landingpage.dto.AppRoleAdminDto;
 import uk.gov.justice.laa.portal.landingpage.entity.AdminApp;
 import uk.gov.justice.laa.portal.landingpage.entity.App;
-import uk.gov.justice.laa.portal.landingpage.entity.AppRole;
-import uk.gov.justice.laa.portal.landingpage.entity.UserType;
 import uk.gov.justice.laa.portal.landingpage.repository.AdminAppRepository;
 import uk.gov.justice.laa.portal.landingpage.repository.AppRepository;
-import uk.gov.justice.laa.portal.landingpage.repository.AppRoleRepository;
 
 @ExtendWith(MockitoExtension.class)
 class AdminServiceTest {
 
     @Mock
     private AppRepository appRepository;
-
-    @Mock
-    private AppRoleRepository appRoleRepository;
 
     @Mock
     private AdminAppRepository adminAppRepository;
@@ -42,7 +35,6 @@ class AdminServiceTest {
     void setUp() {
         adminService = new AdminService(
             appRepository,
-            appRoleRepository,
             adminAppRepository
         );
     }
@@ -86,7 +78,7 @@ class AdminServiceTest {
 
         // Assert
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getName()).isEqualTo("Enabled App");
+        assertThat(result.getFirst().getName()).isEqualTo("Enabled App");
     }
 
     @Test
@@ -112,127 +104,6 @@ class AdminServiceTest {
         verify(appRepository).findAll();
     }
 
-    @Test
-    void testGetAllAppRoles_ReturnsSortedByAppAndOrdinal() {
-        // Arrange
-        App appA = createApp("App A", 1);
-        App appB = createApp("App B", 2);
-
-        List<AppRole> roles = Arrays.asList(
-            createAppRole("Role B1", appB, 1),
-            createAppRole("Role A2", appA, 2),
-            createAppRole("Role A1", appA, 1),
-            createAppRole("Role B2", appB, 2)
-        );
-
-        when(appRoleRepository.findAll()).thenReturn(roles);
-
-        // Act
-        List<AppRoleAdminDto> result = adminService.getAllAppRoles();
-
-        // Assert
-        assertThat(result).hasSize(4);
-        assertThat(result.get(0).getName()).isEqualTo("Role A1");
-        assertThat(result.get(1).getName()).isEqualTo("Role A2");
-        assertThat(result.get(2).getName()).isEqualTo("Role B1");
-        assertThat(result.get(3).getName()).isEqualTo("Role B2");
-    }
-
-    @Test
-    void testGetAppRolesByApp_FiltersAndSortsByOrdinal() {
-        // Arrange
-        App targetApp = createApp("Target App", 1);
-        App otherApp = createApp("Other App", 2);
-
-        List<AppRole> roles = Arrays.asList(
-            createAppRole("Role 3", targetApp, 3),
-            createAppRole("Role 1", targetApp, 1),
-            createAppRole("Other Role", otherApp, 1),
-            createAppRole("Role 2", targetApp, 2)
-        );
-
-        when(appRoleRepository.findAll()).thenReturn(roles);
-
-        // Act
-        List<AppRoleAdminDto> result = adminService.getAppRolesByApp("Target App");
-
-        // Assert
-        assertThat(result).hasSize(3);
-        assertThat(result.get(0).getName()).isEqualTo("Role 1");
-        assertThat(result.get(1).getName()).isEqualTo("Role 2");
-        assertThat(result.get(2).getName()).isEqualTo("Role 3");
-    }
-
-    @Test
-    void testGetAllAppRoles_HandlesUserTypeRestrictions() {
-        // Arrange
-        App app = createApp("Test App", 1);
-        AppRole role = AppRole.builder()
-            .id(UUID.randomUUID())
-            .name("Restricted Role")
-            .description("Role with restrictions")
-            .app(app)
-            .ordinal(1)
-            .authzRole(false)
-            .userTypeRestriction(new UserType[]{UserType.INTERNAL, UserType.EXTERNAL})
-            .build();
-
-        when(appRoleRepository.findAll()).thenReturn(Arrays.asList(role));
-
-        // Act
-        List<AppRoleAdminDto> result = adminService.getAllAppRoles();
-
-        // Assert
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).getUserTypeRestriction()).contains("INTERNAL", "EXTERNAL");
-    }
-
-    @Test
-    void testGetAllAppRoles_HandlesNullApp() {
-        // Arrange
-        AppRole role = AppRole.builder()
-            .id(UUID.randomUUID())
-            .name("Orphan Role")
-            .description("Role without app")
-            .app(null)
-            .ordinal(1)
-            .authzRole(false)
-            .build();
-
-        when(appRoleRepository.findAll()).thenReturn(Arrays.asList(role));
-
-        // Act
-        List<AppRoleAdminDto> result = adminService.getAllAppRoles();
-
-        // Assert
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).getParentApp()).isEmpty();
-        assertThat(result.get(0).getParentAppId()).isEmpty();
-    }
-
-    @Test
-    void testGetAppRolesByApp_HandlesEmptyResults() {
-        // Arrange
-        when(appRoleRepository.findAll()).thenReturn(Arrays.asList());
-
-        // Act
-        List<AppRoleAdminDto> result = adminService.getAppRolesByApp("Non-existent App");
-
-        // Assert
-        assertThat(result).isEmpty();
-    }
-
-    // Helper methods to create test entities
-    private AdminApp createAdminApp(String name, int ordinal, boolean enabled) {
-        return AdminApp.builder()
-            .id(UUID.randomUUID())
-            .name(name)
-            .description("Description for " + name)
-            .ordinal(ordinal)
-            .enabled(enabled)
-            .build();
-    }
-
     private App createApp(String name, int ordinal) {
         return App.builder()
             .id(UUID.randomUUID())
@@ -244,15 +115,15 @@ class AdminServiceTest {
             .build();
     }
 
-
-    private AppRole createAppRole(String name, App app, int ordinal) {
-        return AppRole.builder()
-            .id(UUID.randomUUID())
-            .name(name)
-            .description("Description for " + name)
-            .app(app)
-            .ordinal(ordinal)
-            .authzRole(false)
-            .build();
+    // Helper methods to create test entities
+    private AdminApp createAdminApp(String name, int ordinal, boolean enabled) {
+        return AdminApp.builder()
+                .id(UUID.randomUUID())
+                .name(name)
+                .description("Description for " + name)
+                .ordinal(ordinal)
+                .enabled(enabled)
+                .build();
     }
+
 }
